--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>John Doe | Portfolio</title>
+  <title>Shrishail Golappanavar | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -22,7 +22,7 @@
   <header id="home">
     <div class="hero">
       <img src="assets/profile.jpg" alt="Profile Photo" />
-      <h1>John Doe</h1>
+      <h1>Shrishail Golappanavar</h1>
       <p>Prefinal Year Student | Aspiring Software Engineer</p>
     </div>
   </header>
@@ -30,7 +30,7 @@
   <section id="about">
     <h2>About Me</h2>
     <p>
-      I’m a Computer Science student at Random National Institute of Technology, passionate about building scalable systems and intelligent personalization models. I enjoy solving real-world problems using code and data.
+      I’m a Computer Science student at KLE Technological University, passionate about building scalable systems and intelligent personalization models. I enjoy solving real-world problems using code and data.
     </p>
   </section>
 
@@ -38,9 +38,9 @@
     <h2>Academics</h2>
     <ul>
       <li><strong>Degree:</strong> B.Tech in Computer Science</li>
-      <li><strong>Institution:</strong> Random NIT, India</li>
-      <li><strong>CGPA:</strong> 8.63 / 10</li>
-      <li><strong>Relevant Courses:</strong> Data Structures, Algorithms, ML, DBMS, OS</li>
+      <li><strong>Institution:</strong> KLE Technological University, Hubli</li>
+      <li><strong>CGPA:</strong> 9.54 / 10</li>
+      <li><strong>Relevant Courses:</strong> Data Structures, Algorithms, Web Development, DBMS, OS</li>
     </ul>
   </section>
 
@@ -81,9 +81,9 @@
   <section id="contact">
     <h2>Contact</h2>
     <ul>
-      <li>Email: john.doe@example.com</li>
-      <li>GitHub: github.com/johndoe</li>
-      <li>LinkedIn: linkedin.com/in/johndoe</li>
+      <li>Email: shrishail.g@gmail.com</li>
+<!--       <li>GitHub: github.com/johndoe</li> -->
+<!--       <li>LinkedIn: linkedin.com/in/johndoe</li> -->
     </ul>
   </section>
 
