--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <header id="home">
     <div class="hero">
-      <img src="assets/profile.jpg" alt="Profile Photo" />
+<!--       <img src="assets/profile.jpg" alt="Profile Photo" /> -->
       <h1>Shrishail Golappanavar</h1>
       <p>Prefinal Year Student | Aspiring Software Engineer</p>
     </div>
@@ -37,7 +37,7 @@
   <section id="academics">
     <h2>Academics</h2>
     <ul>
-      <li><strong>Degree:</strong> B.Tech in Computer Science</li>
+      <li><strong>Degree:</strong> B.E in Computer Science</li>
       <li><strong>Institution:</strong> KLE Technological University, Hubli</li>
       <li><strong>CGPA:</strong> 9.54 / 10</li>
       <li><strong>Relevant Courses:</strong> Data Structures, Algorithms, Web Development, DBMS, OS</li>
