--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>John Doe | Portfolio</title>
+  <title>Shrishail Golappanavar | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
@@ -15,7 +15,7 @@
 
   <nav id="navbar">
     <div class="nav-container">
-      <div class="nav-brand">John Doe</div>
+      <div class="nav-brand">Shrishail Golappanavar</div>
       <ul class="nav-links">
         <li><a href="#home" class="active">Home</a></li>
         <li><a href="#about">About</a></li>
@@ -30,8 +30,8 @@
 
   <header id="home" class="hero-section">
     <div class="hero-content">
-      <img src="assets/profile.jpg" alt="Profile Photo" class="hero-img" />
-      <h1>John Doe</h1>
+<!--       <img src="assets/profile.jpg" alt="Profile Photo" class="hero-img" /> -->
+      <h1>Shrishail Golappanavar</h1>
       <p>Prefinal Year Student | Aspiring Software Engineer</p>
     </div>
   </header>
@@ -40,17 +40,17 @@
     <section id="about" class="section-card">
       <h2>About Me</h2>
       <p>
-        I’m a Computer Science student at Random National Institute of Technology, passionate about building scalable systems and intelligent personalization models. I enjoy solving real-world problems using code and data.
+        I’m a Computer Science student at KLE Technological University, passionate about building scalable systems and intelligent personalization models. I enjoy solving real-world problems using code and data.
       </p>
     </section>
 
     <section id="academics" class="section-card">
       <h2>Academics</h2>
       <ul>
-        <li><strong>Degree:</strong> B.Tech in Computer Science</li>
-        <li><strong>Institution:</strong> Random NIT, India</li>
-        <li><strong>CGPA:</strong> 8.63 / 10</li>
-        <li><strong>Relevant Courses:</strong> Data Structures, Algorithms, ML, DBMS, OS</li>
+        <li><strong>Degree:</strong> B.E in Computer Science</li>
+        <li><strong>Institution:</strong> KLE Technological University, Hubli</li>
+        <li><strong>CGPA:</strong> 9.54 / 10</li>
+        <li><strong>Relevant Courses:</strong> Data Structures, Algorithms, Web Development, DBMS, OS</li>
       </ul>
     </section>
 
