--- a/index.html
+++ b/index.html
@@ -61,20 +61,20 @@
         <div class="project-text">
           <h3>Smart Product Recommender</h3>
           <p>
-            A content and session-based product ranking system for e-commerce platforms to improve personalization. Combined user behavior and metadata to boost session conversion rates.
+            Built a model which ranks the results based on relevance. 
           </p>
-          <p><strong>Tech:</strong> Python, Pandas, Scikit-learn</p>
+          <p><strong>Tech:</strong> Python</p>
         </div>
         <img src="assets/project1.png" alt="Project 1" />
       </div>
 
       <div class="project-card reverse">
         <div class="project-text">
-          <h3>Seller Diversity Ranker</h3>
+          <h3>Multi-Layered Answer Generation System</h3>
           <p>
-            Built a fairness-aware re-ranking model to balance product visibility among sellers. Used click-through data and trust scores to demote overpromoted sellers.
+            Developed a query resolution system that dynamically generates three tiers of responses — Beginner, Intermediate, and Expert — for any user input.
           </p>
-          <p><strong>Tech:</strong> Python, XGBoost, Matplotlib</p>
+          <p><strong>Tech:</strong> Python</p>
         </div>
         <img src="assets/project2.png" alt="Project 2" />
       </div>
