--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
     <section id="contact" class="section-card">
       <h2>Contact</h2>
       <ul>
-        <li>Email: john.doe@example.com</li>
-        <li>GitHub: <a href="https://github.com/johndoe" target="_blank" rel="noopener noreferrer">github.com/johndoe</a></li>
-        <li>LinkedIn: <a href="https://linkedin.com/in/johndoe" target="_blank" rel="noopener noreferrer">linkedin.com/in/johndoe</a></li>
+        <li>Email: shrishail.g@gmail.com</li>
+        <li>GitHub: <a href="https://github.com/shrishail" target="_blank" rel="noopener noreferrer">github.com/johndoe</a></li>
+        <li>LinkedIn: <a href="https://linkedin.com/in/shrishail" target="_blank" rel="noopener noreferrer">linkedin.com/in/johndoe</a></li>
       </ul>
     </section>
   </main>
