--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
       <h2>Contact</h2>
       <ul>
         <li>Email: shrishail.g@gmail.com</li>
-        <li>GitHub: <a href="https://github.com/shrishail" target="_blank" rel="noopener noreferrer">github.com/johndoe</a></li>
-        <li>LinkedIn: <a href="https://linkedin.com/in/shrishail" target="_blank" rel="noopener noreferrer">linkedin.com/in/johndoe</a></li>
+        <li>GitHub: <a href="https://github.com/shrishail" target="_blank" rel="noopener noreferrer">github.com/shrishail</a></li>
+        <li>LinkedIn: <a href="https://linkedin.com/in/shrishail" target="_blank" rel="noopener noreferrer">linkedin.com/in/shrishail</a></li>
       </ul>
     </section>
   </main>
