--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     
     <!-- Business Case 2 -->
     <div class="business-case reverse">
-      <a href="delivery-routing.html">
+      <a href="optimizing_delivery-routes.html">
         <img src="assets/delivery_routing.png" alt="Delivery Routing" />
       </a>
       <div>
