--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <img src="assets/delivery_routing.png" alt="Delivery Routing" />
       </a>
       <div>
-        <h3><a href="delivery-routing.html">Optimizing Delivery Routes</a></h3>
+        <h3><a href="optimizing_delivery_routes.html">Optimizing Delivery Routes</a></h3>
         <p><strong>Goal:</strong> Find optimal delivery paths across cities.</p>
         <p><strong>Tech:</strong> Dijkstra, TSP, Floyd-Warshall, MST.</p>
       </div>
