--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <!-- Business Case 1 -->
     <div class="business-case">
       <a href="dynamic-pricing.html">
-        <img src="assets/dynamic_pricing.png" alt="Dynamic Pricing" />
+        <img src="assets/Dynamic_pricing.png" alt="Dynamic Pricing" />
       </a>
       <div>
         <h3><a href="dynamic-pricing.html">Dynamic Pricing & Discount Optimization</a></h3>
@@ -132,7 +132,7 @@
     <!-- Business Case 3 -->
     <div class="business-case">
       <a href="inventory-reorg.html">
-        <img src="assets/inventory.png" alt="Inventory Reorganization" />
+        <img src="assets/inventory-org.png" alt="Inventory Reorganization" />
       </a>
       <div>
         <h3><a href="inventory-reorg.html">Warehouse Inventory Reorganization</a></h3>
@@ -144,7 +144,7 @@
     <!-- Business Case 4 -->
     <div class="business-case reverse">
       <a href="cart-pricing.html">
-        <img src="assets/shopping_cart.png" alt="Cart Pricing" />
+        <img src="assets/Price-calculation.png" alt="Cart Pricing" />
       </a>
       <div>
         <h3><a href="cart-pricing.html">Shopping Cart Price Calculation with Offers</a></h3>
@@ -168,7 +168,7 @@
     <!-- Business Case 6 -->
     <div class="business-case reverse">
       <a href="product-linking.html">
-        <img src="assets/product_similarity.png" alt="Product Linking" />
+        <img src="assets/product-similarity.png" alt="Product Linking" />
       </a>
       <div>
         <h3><a href="product-linking.html">Product Similarity and Variant Linking</a></h3>
@@ -192,7 +192,7 @@
     <!-- Business Case 8 -->
     <div class="business-case reverse">
       <a href="stockout-alert.html">
-        <img src="assets/stock_alert.png" alt="Stockout Prevention" />
+        <img src="assets/stock-alert.png" alt="Stockout Prevention" />
       </a>
       <div>
         <h3><a href="stockout-alert.html">Stockout Prevention Alert System</a></h3>
