--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <!-- Business Case 3 -->
     <div class="business-case">
       <a href="inventory-reorg.html">
-        <img src="assets/inventory-org.png" alt="Inventory Reorganization" />
+        <img src="assets/Inventory-org.png" alt="Inventory Reorganization" />
       </a>
       <div>
         <h3><a href="inventory-reorg.html">Warehouse Inventory Reorganization</a></h3>
