--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </p>
 
       <div class="business-case">
-        <img src="assets/niche_category.png" alt="Niche Categories" />
+        <img src="assets/niche-category.png" alt="Niche Categories" />
         <div>
           <h3>Business Case 1: Improving Ranking in Niche Categories</h3>
           <p><strong>Problem:</strong> Poor relevance in low-signal or niche categories.</p>
@@ -97,7 +97,7 @@
       </div>
 
       <div class="business-case reverse">
-        <img src="assets/seller_bias.png" alt="Seller Promotion Bias" />
+        <img src="assets/seller-bias.png" alt="Seller Promotion Bias" />
         <div>
           <h3>Business Case 2: Reducing Seller Promotion Bias</h3>
           <p><strong>Problem:</strong> Top sellers dominate rankings due to boosts, lowering variety.</p>
