--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <!-- Business Case 2 -->
     <div class="business-case reverse">
       <a href="optimizing_delivery_routes.html">
-        <img src="assets/delivery_routing.png" alt="Delivery Routing" />
+        <img src="assets/Route-optimization.png" alt="Delivery Routing" />
       </a>
       <div>
         <h3><a href="optimizing_delivery_routes.html">Optimizing Delivery Routes</a></h3>
@@ -180,7 +180,7 @@
     <!-- Business Case 7 -->
     <div class="business-case">
       <a href="region-hub-selection.html">
-        <img src="assets/region_hub.png" alt="Region Hub Selection" />
+        <img src="assets/Region-based-hub.png" alt="Region Hub Selection" />
       </a>
       <div>
         <h3><a href="region-hub-selection.html">Region-based Delivery Hub Selection</a></h3>
