--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="nav-container">
       <div class="nav-brand">Shrishail Golappanavar</div>
       <ul class="nav-links">
-        <li><a href="#home" class="active">Home</a></li>
+        <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#academics">Academics</a></li>
         <li><a href="#projects">Projects</a></li>
